deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argodeploy2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: argodeploy2
  template:
    metadata:
      labels:
        app: argodeploy2
    spec:
      containers:
      - name: argocontainer
        image: ekhari/argopython:latest # Use the image from Docker Hub
        ports:
        - containerPort: 5000
