deployments/flask-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: sample-app.cluster-test.salesconnection.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argodeploy2-service
            port:
              number: 5000
